--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Boilerplate for Advanced HTML/CSS Tools UOC students",
   "scripts": {
-    "parcel:serve": "parcel -p 8123 --target web --log-level verbose",
+    "parcel:serve": "parcel -p 8123 --target web --log-level verbose --open",
     "parcel:build": "parcel build --target web --no-source-maps --no-cache",
     "clean": "rimraf dist .cache .cache-loader .parcel-cache",
     "dev": "npm-run-all clean parcel:serve",
@@ -47,9 +47,8 @@
     "stylelint": "^16.10.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-recommended-scss": "^14.1.0",
-    "stylelint-scss": "^6.8.1"
-  },
-  "dependencies": {
+    "stylelint-scss": "^6.8.1",
     "@fortawesome/fontawesome-free": "^6.6.0"
   }
+
 }
